--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <title> Joseph Boumerhi: About Me</title>
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
 </head>
 
 <body>
@@ -11,10 +11,10 @@
     <div class="item item-1">
         <nav>
             <a class="nameTitle"> Joseph Boumerhi</a>
-            <a class="topicLinks" href="/html/mainAbout.html"> About Me</a>
-            <a class="topicLinks" href="/html/gameDev.html"> Game Dev</a>
-            <a class="topicLinks" href="/html/3DModelling.html"> 3D Modelling</a>
-            <a class="topicLinks" href="/html/archive.html"> Archive </a>
+            <a class="topicLinks" href="html/mainAbout.html"> About Me</a>
+            <a class="topicLinks" href="html/gameDev.html"> Game Dev</a>
+            <a class="topicLinks" href="html/3DModelling.html"> 3D Modelling</a>
+            <a class="topicLinks" href="html/archive.html"> Archive </a>
         </nav>
     </div>
     <div class="item item-2">
