Doing quick folder fixes

--- a/html/3DModelling.html
+++ b/html/3DModelling.html
@@ -1,7 +1,7 @@
 <head>
     <meta charset="utf-8" />
     <title> Joseph Boumerhi: 3D Modelling</title>
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
 </head>
 
 <body>
@@ -9,10 +9,10 @@
         <div class="item item-1">
             <nav>
                 <a class="nameTitle"> Joseph Boumerhi</a>
-                <a class="topicLinks" href="/html/mainAbout.html"> About Me</a>
-                <a class="topicLinks" href="/html/gameDev.html"> Game Dev</a>
-                <a class="topicLinks" href="/html/3DModelling.html"> 3D Modelling</a>
-                <a class="topicLinks" href="/html/archive.html"> Archive </a>
+                <a class="topicLinks" href="html/mainAbout.html"> About Me</a>
+                <a class="topicLinks" href="html/gameDev.html"> Game Dev</a>
+                <a class="topicLinks" href="html/3DModelling.html"> 3D Modelling</a>
+                <a class="topicLinks" href="html/archive.html"> Archive </a>
             </nav>
         </div>
         <div class="item item-2">
@@ -26,7 +26,7 @@
                 friends that I have an identity they go by, and through this work I believe that I will be more
                 knowledgeable in a way, be more understanding, and getting closer to them.
             </p>
-            <img src="/assets/media/3DModelling/JosephB_MultiIdentityInprogress.png"
+            <img src="assets/media/3DModelling/JosephB_MultiIdentityInprogress.png"
                 alt="Iteration of a peculiar character model" width="300" height="300">
             <h1>"Half-Nerved Rest" (2024)</h1>
             <p>
@@ -43,8 +43,8 @@
                 seen as soothing dim light and caress of bedsheets.
             </p>
             <video controls width="300">
-                <source src="/assets/media/3DModelling/JosephB_HalfNervedRest.mp4" type="video/mp4" />
-                <source src="/assets/media/3DModelling/JosephB_HalfNervedRest.webm" type="video/webm" />
+                <source src="assets/media/3DModelling/JosephB_HalfNervedRest.mp4" type="video/mp4" />
+                <source src="assets/media/3DModelling/JosephB_HalfNervedRest.webm" type="video/webm" />
             </video>
             <h1>"Daemmy" Character Model (2022)</h1>
             <p>
@@ -55,11 +55,11 @@
                 be able to express through shapes and signs. While the retopology was done automatically for this work,
                 it was an exercise with coming up
             </p>
-            <img src="/assets/media/3DModelling/JosephB_Daemmy_model_sheet.png"
+            <img src="assets/media/3DModelling/JosephB_Daemmy_model_sheet.png"
                 alt="Character Design Sheet for a demonic character" width="600" height="400">
             <video controls width="300">
-                <source src="/assets/media/3DModelling/JosephB_WalkCycle_Final.mp4" type="video/mp4" />
-                <source src="/assets/media/3DModelling/JosephB_WalkCycle_Final.webm" type="video/webm" />
+                <source src="assets/media/3DModelling/JosephB_WalkCycle_Final.mp4" type="video/mp4" />
+                <source src="assets/media/3DModelling/JosephB_WalkCycle_Final.webm" type="video/webm" />
             </video>
             <h1>Self-Portrait Model (2023)</h1>
             <p>
@@ -70,13 +70,13 @@
                 during harsh weathers, toy guns, etc.
             </p>
             <div class="mediaRow">
-                <img src="/assets/media/3DModelling/JosephB_Expression_Neutral.png"
+                <img src="assets/media/3DModelling/JosephB_Expression_Neutral.png"
                     alt="3D Joseph with a neutral expression" width="200" height="200">
-                <img src="/assets/media/3DModelling/JosephB_Phoneme_OH.png" alt="3D Joseph looking surprised"
+                <img src="assets/media/3DModelling/JosephB_Phoneme_OH.png" alt="3D Joseph looking surprised"
                     width="200" height="200">
-                <img src="/assets/media/3DModelling/JosephB_Expression_BigCheeky.png"
+                <img src="assets/media/3DModelling/JosephB_Expression_BigCheeky.png"
                     alt="3D Joseph looking mischievous" width="200" height="200">
-                <img src="/assets/media/3DModelling/JosephB_Expression_SquashedDingus.png"
+                <img src="assets/media/3DModelling/JosephB_Expression_SquashedDingus.png"
                     alt="3D Joseph looking like dummy" width="200" height="200">
             </div>
         </div>
