--- a/html/archive.html
+++ b/html/archive.html
@@ -1,7 +1,7 @@
 <head>
     <meta charset="utf-8" />
     <title> Joseph Boumerhi: Archive</title>
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
 </head>
 
 <body>
@@ -9,10 +9,10 @@
         <div class="item item-1">
             <nav>
                 <a class="nameTitle"> Joseph Boumerhi</a>
-                <a class="topicLinks" href="/html/mainAbout.html"> About Me</a>
-                <a class="topicLinks" href="/html/gameDev.html"> Game Dev</a>
-                <a class="topicLinks" href="/html/3DModelling.html"> 3D Modelling</a>
-                <a class="topicLinks" href="/html/archive.html"> Archive </a>
+                <a class="topicLinks" href="html/mainAbout.html"> About Me</a>
+                <a class="topicLinks" href="html/gameDev.html"> Game Dev</a>
+                <a class="topicLinks" href="html/3DModelling.html"> 3D Modelling</a>
+                <a class="topicLinks" href="html/archive.html"> Archive </a>
             </nav>
         </div>
         <div class="item item-2">
@@ -28,7 +28,7 @@
                 “materials” lead to different interactions.
             </p>
             <div class="mediaRow">
-                <img src="/assets/media/Archive/HorseshoeCrab.png" class="centerImageVideos" alt="Fluffy Horseshoe Crab"
+                <img src="assets/media/Archive/HorseshoeCrab.png" class="centerImageVideos" alt="Fluffy Horseshoe Crab"
                     width="300" height="300">
             </div>
             <h1>"Surpasseth" (2019)</h1>
@@ -37,7 +37,7 @@
                 development. It is simply a third-person shooter with platforming elements and a few levels.
             </p>
             <div class="mediaRow">
-                <img src="/assets/media/Archive/SurpassethScreenshot.png" class="centerImageVideos" alt="" width="325"
+                <img src="assets/media/Archive/SurpassethScreenshot.png" class="centerImageVideos" alt="" width="325"
                     height="325">
                 <!--Took the embed from my "unlisted" video on Youtube-->
                 <iframe width="325" height="325" src="https://www.youtube.com/embed/Pc8Mam4hVEg?si=kJWKmJ1bPyJWa8Qw"
@@ -52,7 +52,7 @@
                 game.
             </p>
             <div class="mediaRow">
-                <img src="/assets/media/Archive/IterativeP1Screenshot.png" class="centerImageVideos"
+                <img src="assets/media/Archive/IterativeP1Screenshot.png" class="centerImageVideos"
                     alt="Early FPS Unity Game Prototype Project" width="300" height="300">
             </div>
         </div>
