--- a/html/mainAbout.html
+++ b/html/mainAbout.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <title> Joseph Boumerhi: About Me</title>
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
 </head>
 
 <body>
@@ -11,10 +11,10 @@
     <div class="item item-1">
         <nav>
             <a class="nameTitle"> Joseph Boumerhi</a>
-            <a class="topicLinks" href="/html/mainAbout.html"> About Me</a>
-            <a class="topicLinks" href="/html/gameDev.html"> Game Dev</a>
-            <a class="topicLinks" href="/html/3DModelling.html"> 3D Modelling</a>
-            <a class="topicLinks" href="/html/archive.html"> Archive </a>
+            <a class="topicLinks" href="html/mainAbout.html"> About Me</a>
+            <a class="topicLinks" href="html/gameDev.html"> Game Dev</a>
+            <a class="topicLinks" href="html/3DModelling.html"> 3D Modelling</a>
+            <a class="topicLinks" href="html/archive.html"> Archive </a>
         </nav>
     </div>
     <div class="item item-2">
@@ -50,10 +50,10 @@
             insightful and paying attention to nuances and what those nuances represent when observing the world or
             myself.
         </p>
-        <a href="/assets/media/AboutMe/JosephB_QuickPortfolioCV.pdf" download>
-            <img src="/assets/media/icons/icons8-cv-64.png" class="iconComponent" width="64" height="64"> 
+        <a href="assets/media/AboutMe/JosephB_QuickPortfolioCV.pdf" download>
+            <img src="assets/media/icons/icons8-cv-64.png" class="iconComponent" width="64" height="64"> 
         </a>
-        <img src="/assets/media/AboutMe/SelfieOfJoseph.png" alt="Selfie Of Me" class="mediaRow" width="400" height="350">
+        <img src="assets/media/AboutMe/SelfieOfJoseph.png" alt="Selfie Of Me" class="mediaRow" width="400" height="350">
     </div>
 </div>
 </body>
