--- a/html/gameDev.html
+++ b/html/gameDev.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <title> Joseph Boumerhi: Game Development</title>
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
 </head>
 
 <body>
@@ -11,10 +11,10 @@
     <div class="item item-1">
         <nav>
             <a class="nameTitle"> Joseph Boumerhi</a>
-            <a class="topicLinks" href="/html/mainAbout.html"> About Me</a>
-            <a class="topicLinks" href="/html/gameDev.html"> Game Dev</a>
-            <a class="topicLinks" href="/html/3DModelling.html"> 3D Modelling</a>
-            <a class="topicLinks" href="/html/archive.html"> Archive </a>
+            <a class="topicLinks" href="html/mainAbout.html"> About Me</a>
+            <a class="topicLinks" href="html/gameDev.html"> Game Dev</a>
+            <a class="topicLinks" href="html/3DModelling.html"> 3D Modelling</a>
+            <a class="topicLinks" href="html/archive.html"> Archive </a>
         </nav>
     </div>
     <div class="item item-2">
@@ -29,7 +29,7 @@
             people of the idea”, which is an idea I’ve been taking to heart recently.
         </p>
         <div class="mediaRow">
-        <img src="/assets/media/GameDev/HomunculusLandscapeScreenshot.png" class="centerImage" alt="Landscape from project" width="600" height="400">
+        <img src="assets/media/GameDev/HomunculusLandscapeScreenshot.png" class="centerImage" alt="Landscape from project" width="600" height="400">
         </div>
         <p>
             While it is an “in-progress” thing, I found the conception of this work to be a motivating force for me to
@@ -38,11 +38,11 @@
             thinking of factions based on intellectualism, hedonism, and nihilism.
         </p>
         <div class="mediaRow">
-            <img src="/assets/media/GameDev/Deah-Deus.png" alt="Intellectual robot" width="200" height="200">
-            <img src="/assets/media/GameDev/Silviam.png" alt="Hedonistic succubus" width="200" height="200">
+            <img src="assets/media/GameDev/Deah-Deus.png" alt="Intellectual robot" width="200" height="200">
+            <img src="assets/media/GameDev/Silviam.png" alt="Hedonistic succubus" width="200" height="200">
         </div>
-            <a href="/assets/media/GameDev/JosephB_ProjectHomunculus_Documentation.pdf" download>
-                <img src="/assets/media/icons/icons8-document-64.png" class="iconComponent" width="64" height="64"> 
+            <a href="assets/media/GameDev/JosephB_ProjectHomunculus_Documentation.pdf" download>
+                <img src="assets/media/icons/icons8-document-64.png" class="iconComponent" width="64" height="64"> 
             </a>
     </div>
     </div>
