--- a/html/archive.html
+++ b/html/archive.html
@@ -1,7 +1,7 @@
 <head>
     <meta charset="utf-8" />
     <title> Joseph Boumerhi: Archive</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
 </head>
 
 <body>
