--- a/html/mainAbout.html
+++ b/html/mainAbout.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <title> Joseph Boumerhi: About Me</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
 </head>
 
 <body>
