Fixing html things

--- a/html/3DModelling.html
+++ b/html/3DModelling.html
@@ -9,10 +9,10 @@
         <div class="item item-1">
             <nav>
                 <a class="nameTitle"> Joseph Boumerhi</a>
-                <a class="topicLinks" href="html/mainAbout.html"> About Me</a>
-                <a class="topicLinks" href="html/gameDev.html"> Game Dev</a>
-                <a class="topicLinks" href="html/3DModelling.html"> 3D Modelling</a>
-                <a class="topicLinks" href="html/archive.html"> Archive </a>
+                <a class="topicLinks" href="mainAbout.html"> About Me</a>
+                <a class="topicLinks" href="gameDev.html"> Game Dev</a>
+                <a class="topicLinks" href="3DModelling.html"> 3D Modelling</a>
+                <a class="topicLinks" href="archive.html"> Archive </a>
             </nav>
         </div>
         <div class="item item-2">
