Fixing asset things

--- a/html/gameDev.html
+++ b/html/gameDev.html
@@ -29,7 +29,7 @@
             people of the idea”, which is an idea I’ve been taking to heart recently.
         </p>
         <div class="mediaRow">
-        <img src="assets/media/GameDev/HomunculusLandscapeScreenshot.png" class="centerImage" alt="Landscape from project" width="600" height="400">
+        <img src="../assets/media/GameDev/HomunculusLandscapeScreenshot.png" class="centerImage" alt="Landscape from project" width="600" height="400">
         </div>
         <p>
             While it is an “in-progress” thing, I found the conception of this work to be a motivating force for me to
@@ -38,11 +38,11 @@
             thinking of factions based on intellectualism, hedonism, and nihilism.
         </p>
         <div class="mediaRow">
-            <img src="assets/media/GameDev/Deah-Deus.png" alt="Intellectual robot" width="200" height="200">
-            <img src="assets/media/GameDev/Silviam.png" alt="Hedonistic succubus" width="200" height="200">
+            <img src="../assets/media/GameDev/Deah-Deus.png" alt="Intellectual robot" width="200" height="200">
+            <img src="../assets/media/GameDev/Silviam.png" alt="Hedonistic succubus" width="200" height="200">
         </div>
-            <a href="assets/media/GameDev/JosephB_ProjectHomunculus_Documentation.pdf" download>
-                <img src="assets/media/icons/icons8-document-64.png" class="iconComponent" width="64" height="64"> 
+            <a href="../assets/media/GameDev/JosephB_ProjectHomunculus_Documentation.pdf" download>
+                <img src="../assets/media/icons/icons8-document-64.png" class="iconComponent" width="64" height="64"> 
             </a>
     </div>
     </div>
