--- a/html/mainAbout.html
+++ b/html/mainAbout.html
@@ -50,10 +50,10 @@
             insightful and paying attention to nuances and what those nuances represent when observing the world or
             myself.
         </p>
-        <a href="assets/media/AboutMe/JosephB_QuickPortfolioCV.pdf" download>
-            <img src="assets/media/icons/icons8-cv-64.png" class="iconComponent" width="64" height="64"> 
+        <a href="../assets/media/AboutMe/JosephB_QuickPortfolioCV.pdf" download>
+            <img src="../assets/media/icons/icons8-cv-64.png" class="iconComponent" width="64" height="64"> 
         </a>
-        <img src="assets/media/AboutMe/SelfieOfJoseph.png" alt="Selfie Of Me" class="mediaRow" width="400" height="350">
+        <img src="../assets/media/AboutMe/SelfieOfJoseph.png" alt="Selfie Of Me" class="mediaRow" width="400" height="350">
     </div>
 </div>
 </body>
