Fixing assets, adding and removing a few assets, adding some words here and there, adding comments in the CSS file

--- a/html/archive.html
+++ b/html/archive.html
@@ -25,20 +25,23 @@
             <p>
                 A fluffy horseshoe crab imitating other animals through idling and touch. This was a collaborative
                 experience with my mother alongside starting an small interest in fabric, but mostly about how different
-                “materials” lead to different interactions.
+                “materials” lead to different interactions. This taught me an introduction to electronics and working
+                with an Arduino, while learning the importance of "materials" and "interactions".
             </p>
             <div class="mediaRow">
-                <img src="../assets/media/Archive/HorseshoeCrab.png" class="centerImageVideos" alt="Fluffy Horseshoe Crab"
-                    width="300" height="300">
+                <img src="../assets/media/Archive/HorseshoeCrab.png" class="centerImageVideos"
+                    alt="Fluffy Horseshoe Crab" width="300" height="300">
             </div>
             <h1>"Surpasseth" (2019)</h1>
             <p>
                 My first introduction to game development with a project in Unreal Engine 4, started my passion for game
-                development. It is simply a third-person shooter with platforming elements and a few levels.
+                development. It is simply a third-person shooter with platforming elements and a few levels. This early
+                game was received pretty decently in class at the time. Taught me a few things from knowing how to lead
+                people through levels and to set up some documentations for when doing work on games.
             </p>
             <div class="mediaRow">
-                <img src="../assets/media/Archive/SurpassethScreenshot.png" class="centerImageVideos" alt="" width="325"
-                    height="325">
+                <img src="../assets/media/Archive/SurpassethScreenshot.png"
+                    alt="Early TPS game in Unreal 4 with platforming" width="325" height="325">
                 <!--Took the embed from my "unlisted" video on Youtube-->
                 <iframe width="325" height="325" src="https://www.youtube.com/embed/Pc8Mam4hVEg?si=kJWKmJ1bPyJWa8Qw"
                     class="centerImageVideos" title="YouTube video player" frameborder="0"
@@ -47,9 +50,11 @@
             </div>
             <h1>"Iterative P1" (2022)</h1>
             <p>
-                Introduction to prototyping with game development, this project was one of many small prototypes. My
-                encouragement to choose this “P1” in particular was because of a peer’s enjoyment of one segment of the
-                game.
+                Introduction to prototyping with game development, this project was one of many small prototypes in the
+                class in which I did this in. My encouragement to choose this “P1” in particular was because of a peer's
+                enjoyment of one segment of the game. That peer mentioned that she really liked a segment where
+                visibility was toned down and justoverall dark. Probably helped with thinking more about atmosphere of
+                an area.
             </p>
             <div class="mediaRow">
                 <img src="../assets/media/Archive/IterativeP1Screenshot.png" class="centerImageVideos"
