--- a/html/gameDev.html
+++ b/html/gameDev.html
@@ -26,15 +26,15 @@
             growth of AI and concerns to most of us, a prominent one being pessimistic as different actors which to push
             it forward over human workers. While making it within a class too ambitious for its time frame, I had gotten
             really promising propositions and questions from some peers and the instructors on “how to try to convince
-            people of the idea”, which is an idea I’ve been taking to heart recently.
+            people of the idea”, which is an idea I've been taking to heart recently.
         </p>
         <div class="mediaRow">
         <img src="../assets/media/GameDev/HomunculusLandscapeScreenshot.png" class="centerImage" alt="Landscape from project" width="600" height="400">
         </div>
         <p>
             While it is an “in-progress” thing, I found the conception of this work to be a motivating force for me to
-            discover new ways of thought, an opportunity to really get into new tools to tinker with. As a thing I’m
-            searching for is to embody the inhabitants of this game’s world in different ideologies, so far I’ve been
+            discover new ways of thought, an opportunity to really get into new tools to tinker with. As a thing I'm
+            searching for is to embody the inhabitants of this game's world in different ideologies, so far I've been
             thinking of factions based on intellectualism, hedonism, and nihilism.
         </p>
         <div class="mediaRow">
