--- a/html/3DModelling.html
+++ b/html/3DModelling.html
@@ -24,17 +24,27 @@
                 identities. My interest as why I started working on this was that I wanted to make a work that will link
                 to a game that I will continue work on, but mainly as an opportunity for myself to bond more with
                 friends that I have an identity they go by, and through this work I believe that I will be more
-                knowledgeable in a way, be more understanding, and getting closer to them.
+                knowledgeable in a way, be more understanding, and getting closer to them. As of April 10, I was able to
+                run down different variations of identities and get chunk of people into interview and Google Forms.
+                This design project could later be redone and implemented into a game I'll work on, or trying out at
+                making a possible plug-in.
             </p>
-            <img src="../assets/media/3DModelling/JosephB_MultiIdentityInProgress.png"
-                alt="Iteration of a peculiar character model" width="300" height="300">
+            <div class="mediaRow">
+                <img src="../assets/media/3DModelling/JosephB_MultiIdentityCharacterModel_DefaultAndrogynous.png"
+                    alt="Default androgynous character model" width="350" height="300">
+                <img src="../assets/media/3DModelling/JosephB_MultiIdentityCharacterModel_Masculine.png"
+                    alt="Masculine character model" width="350" height="300">
+                <img src="../assets/media/3DModelling/JosephB_MultiIdentityCharacterModel_Feminine.png"
+                    alt="Feminine character model" width="350" height="300">
+                <img src="../assets/media/3DModelling/JosephB_MultiIdentityCharacterModel_Trans.png"
+                    alt="Trans character model" width="350" height="300">
+            </div>
             <h1>"Half-Nerved Rest" (2024)</h1>
             <p>
                 This short and quickly made render/animation was made part of an assignment under a uses of "keywords" I
                 had chosen, which were "Working Failure". While incompleteness could be seen in its lack of refinement,
                 and other objects outside the camera view. I felt like facing the "failure", or incompleteness, as in
-                the
-                way I perceive myself as one as results of insecurities and disabilities, and how through those
+                the way I perceive myself as one as results of insecurities and disabilities, and how through those
                 fallacies I believe that I am not fit for greatness or admiration. And recently, I've been feeling a bit
                 better through sharing ideas and meetings with a therapist, although with stress at the time of writing
                 this, I just have to acknowledge myself as someone who actually is competent, just afraid of everything,
@@ -42,10 +52,12 @@
                 self. Self negligence could be seen a seething and irritating red while self care and calmness could
                 seen as soothing dim light and caress of bedsheets.
             </p>
-            <video controls width="300">
-                <source src="../assets/media/3DModelling/JosephB_HalfNervedRest.mp4" type="video/mp4" />
-                <source src="../assets/media/3DModelling/JosephB_HalfNervedRest.webm" type="video/webm" />
-            </video>
+            <div class="mediaRow">
+                <video controls width="600">
+                    <source src="../assets/media/3DModelling/JosephB_HalfNervedRest.mp4" type="video/mp4" />
+                    <source src="../assets/media/3DModelling/JosephB_HalfNervedRest.webm" type="video/webm" />
+                </video>
+            </div>
             <h1>"Daemmy" Character Model (2022)</h1>
             <p>
                 This project helped me carry out thinking about “how” I should create a character model through the
@@ -53,20 +65,26 @@
                 of sculpting, texturing, and animations, lastly “why” it reflects outward. While it was the start of my
                 3D modelling, it is significant to me that drawing is a powerful fundamental skill to have as one will
                 be able to express through shapes and signs. While the retopology was done automatically for this work,
-                it was an exercise with coming up
+                it was an exercise with coming up with a character idea and working through it. It was also an
+                introduction to animation for me through the creation of a walkcycle, and trying the model out into a
+                game engine.
             </p>
-            <img src="../assets/media/3DModelling/JosephB_Daemmy_model_sheet.png"
-                alt="Character Design Sheet for a demonic character" width="600" height="400">
-            <video controls width="300">
-                <source src="../assets/media/3DModelling/JosephB_WalkCycle_Final.mp4" type="video/mp4" />
-                <source src="../assets/media/3DModelling/JosephB_WalkCycle_Final.webm" type="video/webm" />
-            </video>
+            <div class="mediaRow">
+                <img src="../assets/media/3DModelling/JosephB_DaemmyDesign_FrontView.png"
+                    alt="Character Design Sheet for a demonic character" width="225" height="400">
+                <video controls width="300" height="400">
+                    <source src="../assets/media/3DModelling/JosephB_WalkCycle_Final.mp4" type="video/mp4" />
+                    <source src="../assets/media/3DModelling/JosephB_WalkCycle_Final.webm" type="video/webm" />
+                </video>
+                <img src="../assets/media/3DModelling/JosephB_DaemmyDesign_SideView.png"
+                    alt="Character Design Sheet for a demonic character" width="225" height="400">
+            </div>
             <h1>Self-Portrait Model (2023)</h1>
             <p>
                 This project has taught me the invaluable skill of topology, not only would this be a start of me not
                 taking pictures of myself more often, but also beginning to just take pictures of the world around me.
                 An example of my new haphazard habit of pulling out my phone and snap an image of the view or object of
-                interest, as for what I’ve been specific, it would be buildings from certain views, my perspective
+                interest, as for what I've been specific, it would be buildings from certain views, my perspective
                 during harsh weathers, toy guns, etc.
             </p>
             <div class="mediaRow">
